--- a/main.ipynb
+++ b/main.ipynb
@@ -159,7 +159,7 @@
    "source": [
     "label_encoder = LabelEncoder()\n",
     "X[:, 3] = label_encoder.fit_transform(X[:, 3])\n",
-    "X"
+    "print(X)"
    ]
   },
   {
